--- a/index.html
+++ b/index.html
@@ -17,10 +17,20 @@
         <h1>Your's Todo List</h1>
     </header>
     <form>
-        <input type="text" class="todo-input">
-        <button class="todo-button" type="submit">
-            <i class="fas fa-plus-square"></i>
-        </button>
+        <div class="input-button">
+            <input type="text" class="todo-input" autofocus>
+            <button class="todo-button" type="submit">
+                <i class="fas fa-plus-square"></i>
+            </button>
+        </div>
+
+        <div class="select">
+            <select name="todos" class="filter-todo">
+                <option value="all">All</option>
+                <option value="Completed">Completed</option>
+                <option value="Uncompleted">Uncompleted</option>
+            </select>
+        </div>
     </form>
 
     <div class="todo-container">
@@ -40,4 +50,5 @@
     </div>
 </body>
 <script src="./app.js"></script>
+
 </html>
