Added close icon in modal

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
     <div class="modal">
         <div class="modal-container">
             <div class="modal-header">Edit your Todo</div>
-            <div class="modal-close">
-
-            </div>
+            <span class="modal-close">
+                <i class="fas fa-times-circle cancel-icon" onclick="hideModal()"></i>
+            </span>
             <div class="modal-body">
                 <input type="text" class="modal-input" autofocus>
             </div>
